# redis-message-queue

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  PRODUCTION_READINESS_AUDIT.md  README.md  Taskfile.yml  UPGRADING.md  hatch_build.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  scheduled.yml
capsules/260516-round-8/fixes/: FIX-AD-04.md  FIX-AD-05.md  FIX-AD-06-v8.md
devtools/: bump_readme_version.py  check_mypy_baseline.py  mypy_baseline.txt
docs/: api-reference.md  configuration.md  observability.md  operations.md  production-readiness.md  troubleshooting.md
examples/: receive_messages.py  send_messages.py
examples/asyncio/: receive_messages.py  send_messages.py
examples/from_readme/: receive_messages.py  send_messages.py
examples/production/: backpressure.py  graceful_shutdown.py  idempotent_consumer.py  observability.py  receive_messages.py  send_messages.py
examples/production/asyncio/: backpressure.py  graceful_shutdown.py  idempotent_consumer.py  observability.py  receive_messages.py  send_messages.py
redis_message_queue/: __init__.py  _abstract_redis_gateway.py  _callable_utils.py  _config.py  _event.py  _exceptions.py  _payload_limits.py  _queue_key_manager.py  _queue_stats.py  _redis_cluster.py  _redis_gateway.py  _stored_message.py  _warnings.py  redis_message_queue.py
redis_message_queue/asyncio/: __init__.py  _abstract_redis_gateway.py  _redis_gateway.py  redis_message_queue.py
redis_message_queue/interrupt_handler/: __init__.py  _event_driven.py  _implementation.py  _interface.py
tests/: AD-28-F2-async-dedup-key.py  AD-28-F3-dict-payload-contract.py  _model_based.py  _model_no_vt.py  conftest.py  test_abstract_gateway_visibility_property.py  test_async_dedup_callback_typing.py  test_async_examples_runtime_contract.py  test_cleanup_failed_error.py  test_cluster_moved_redirect.py  test_cluster_retry_classification.py  test_cluster_validation.py  test_dead_letter.py  test_decode_responses.py  test_dedup_empty_key.py  test_docs_contracts.py  test_event_driven_interrupt.py  test_exception_context.py  test_from_readme_example_feedback.py  test_gateway_blmove.py  test_gateway_constructor.py  test_gateway_contract.py  test_gateway_retry_safety.py  test_gateway_return_type_validation.py  test_gateway_wait_for_message.py  test_graceful_drain.py  test_heartbeat_lifecycle.py  test_integration_advanced_async.py  test_integration_advanced_sync.py  test_integration_async.py  test_integration_blocking_async.py  test_integration_blocking_sync.py  test_integration_cluster.py  test_integration_cluster_resharding.py  test_integration_decode_responses.py  test_integration_model_based.py  test_integration_oom.py  test_integration_sync.py  test_integration_wrongtype.py  test_interrupt_handler.py  (+34 more)
tests/fixtures/: AD-28-F1-gateway-visibility-contract.py
