[tool.poetry]
name = "redis-message-queue"
version = "8.0.1"
description = "Python message queuing with Redis and message deduplication"
authors = ["Elijas <4084885+Elijas@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
include = ["redis_message_queue/py.typed"]
keywords = ["redis", "message-queue", "deduplication", "task-queue"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]

[tool.poetry.urls]
Homepage = "https://github.com/Elijas/redis-message-queue"
Repository = "https://github.com/Elijas/redis-message-queue"
Issues = "https://github.com/Elijas/redis-message-queue/issues"

[tool.poetry.dependencies]
python = "^3.12"
redis = ">=5.0.0,<8.0.0"
tenacity = ">=8.1.0"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
fakeredis = {version = "*", extras = ["lua"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E731"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    # Channel-rule warnings are emitted at user-actionable failure sites
    # (see _STALE_LEASE_*_WARNING, heartbeat-failure, etc.). Dedicated B8
    # tests assert emission via pytest.warns(); other tests trigger these
    # warnings incidentally as a side effect of exercising lifecycle paths
    # and would fail under "error::" promotion. Ignore at the default
    # filter so emission is silent in incidental tests but pytest.warns
    # assertions still verify emission where intended.
    "ignore::RuntimeWarning:redis_message_queue",
]
markers = [
    "integration: tests that require a real Redis server",
]
