[project]
name = "redis-message-queue"
version = "8.2.0"
description = "Python message queuing with Redis and message deduplication"
authors = [{ name = "Elijas", email = "4084885+Elijas@users.noreply.github.com" }]
readme = "README.md"
license = { text = "MIT" }
license-files = ["LICENSE"]
keywords = ["redis", "message-queue", "deduplication", "task-queue"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "redis>=5.0.0,<8.0.0",
    "tenacity>=8.1.0",
]

[project.urls]
Homepage = "https://github.com/Elijas/redis-message-queue"
Repository = "https://github.com/Elijas/redis-message-queue"
Issues = "https://github.com/Elijas/redis-message-queue/issues"

[dependency-groups]
dev = [
    "bump-my-version>=1.1.2",
    "mypy",
    "ruff",
]
test = [
    "fakeredis[lua]",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.uv]
default-groups = ["dev", "test"]

##############################
### BUMP VERSION
##############################

[tool.bumpversion]
current_version = "8.2.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} -> {new_version}"
allow_dirty = true
commit = true
message = "chore(release): bump version from {current_version} to {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["redis_message_queue"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E731"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    # Channel-rule warnings are emitted at user-actionable failure sites
    # (see _STALE_LEASE_*_WARNING, heartbeat-failure, etc.). Dedicated B8
    # tests assert emission via pytest.warns(); other tests trigger these
    # warnings incidentally as a side effect of exercising lifecycle paths
    # and would fail under "error::" promotion. Ignore at the default
    # filter so emission is silent in incidental tests but pytest.warns
    # assertions still verify emission where intended.
    "ignore::RuntimeWarning:redis_message_queue",
]
markers = [
    "integration: tests that require a real Redis server",
]
